--- a/_includes/skill.html
+++ b/_includes/skill.html
@@ -17,7 +17,7 @@
         <p class="skill"> Agile/Software craftmanship, UX Design, UI Atomic Design, Peer review, Test Driven Development, Hexagonal architecture, Micro services</p>
 
         <p><span><i class="fa-solid fa-user" style="color: #5dc9d0;"></i> Non technique :</span></p>
-        <p class="skill"> Teaching, Project management, Customer training and support, Creation of Video/Audio/Written content</p>
+        <p class="skill"> Enseignement, Gestion de projet, Formation et support utilisateur, Création de contenus Vidéo/Audio/Texte</p>
 
         <p><span><i class="fa-solid fa-language" style="color: #5dc9d0;"></i>Langues :</span></p>
         <p class="skill">Anglais (courant, TOEIC Max), Allemand (ancien B2), Chinois (en apprentissage HSK3), Japonais (ancien A2), Russe (ancien A1)</p>
