--- a/_includes/skill.html
+++ b/_includes/skill.html
@@ -13,7 +13,7 @@
         <p class="skill"> GNU/Linux, Nixos, Jenkins</p>
            </div>
     <div class="col-md-6">
-        <p><span><i class="fa-solid fa-gear" style="color: #5dc9d0;"></i> Methodes :</span></p>
+        <p><span><i class="fa-solid fa-gear" style="color: #5dc9d0;"></i> Méthodes :</span></p>
         <p class="skill"> Agile/Software craftmanship, UX Design, UI Atomic Design, Peer review, Test Driven Development, Hexagonal architecture, Micro services</p>
 
         <p><span><i class="fa-solid fa-user" style="color: #5dc9d0;"></i> Non technique :</span></p>
