--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -24,7 +24,7 @@
             <ul class="tags mb-4">
                 {% for category in post.categories %}
                 <li>
-                    <a class="smoothscroll" href="{{site.baseurl}}/categories#{{ category | replace: " ","-" }}">{{ category }}</a>
+                   {{ category }}
                 </li>
                 {% endfor %}
             </ul>
