--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,13 +12,13 @@ License: https://www.wowthemes.net/freebies-license/
 }
 
 a {
-    color: #2C8C89;
+    color: #1F5C59;
     transition: all 0.2s;
     text-decoration: underline;
 }
 
 a:hover {
-    color: #5dc9d0;
+    color: #1F5C59;
     text-decoration: none;
 }
 
